feat: Implement component action management in the admin UI