@@ -1,5 +1,6 @@
 package dynamicUi.demo.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.*;
@@ -11,17 +12,32 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private final JwtAuthFilter jwtAuthFilter;
+    private final JwtAuthFilter        jwtAuthFilter;
     private final LoginRateLimitFilter loginRateLimitFilter;
 
-    public SecurityConfig(JwtAuthFilter jwtAuthFilter, LoginRateLimitFilter loginRateLimitFilter) {
-        this.jwtAuthFilter = jwtAuthFilter;
+    // FIX: CORS allowed origin was hard-coded to "http://localhost:5173" here,
+    // but individual controllers also had @CrossOrigin("*").
+    // Spring applies both — they produce conflicting CORS headers on preflight
+    // requests, resulting in 403 errors for the browser.
+    //
+    // Fix:
+    //  1. Configure ALL allowed origins here (single source of truth).
+    //  2. Remove @CrossOrigin from all controllers (done in each controller file).
+    //  3. Make the value configurable via application.properties so it works
+    //     in dev (localhost:5173) and production without code changes.
+    @Value("${cors.allowed-origins:http://localhost:5173}")
+    private String allowedOrigins;
+
+    public SecurityConfig(JwtAuthFilter jwtAuthFilter,
+                          LoginRateLimitFilter loginRateLimitFilter) {
+        this.jwtAuthFilter        = jwtAuthFilter;
         this.loginRateLimitFilter = loginRateLimitFilter;
     }
 
@@ -35,15 +51,14 @@ public class SecurityConfig {
                         .requestMatchers("/ws-native/**").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/test").permitAll()
-                        .requestMatchers("/api/ui/**").authenticated()
-                        .requestMatchers("/").authenticated()
                         .requestMatchers("/api/test/**").permitAll()
+                        .requestMatchers("/api/ui/**").authenticated()
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
                         .requestMatchers("/api/components/**").hasRole("ADMIN")
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(loginRateLimitFilter, UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtAuthFilter,        UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -57,7 +72,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfig() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of("http://localhost:5173"));
+
+        // Supports comma-separated list, e.g.:
+        // cors.allowed-origins=http://localhost:5173,https://myapp.com
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        cfg.setAllowedOrigins(origins);
         cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         cfg.setAllowedHeaders(List.of("*"));
         cfg.setAllowCredentials(true);
